--- a/sass/7、layout.css
+++ b/sass/7、layout.css
@@ -1,27 +1,34 @@
 /* reset */
-body, html {
+body,
+html {
   margin: 0;
   padding: 0;
-  font-family: "Helvetica";
+  font-family: 'Helvetica';
   -webkit-user-select: none;
   height: 100%;
   overflow: hidden;
 }
 
-a, input, button {
+a,
+input,
+button {
   -webkit-tap-highlight-color: transparent;
 }
 
-input, button {
+input,
+button {
   -webkit-appearance: none;
   border-radius: 0;
 }
 
-a, a:hover {
+a,
+a:hover {
   text-decoration: none;
 }
 
-div, h1, header {
+div,
+h1,
+header {
   margin: 0;
   padding: 0;
 }
@@ -33,13 +40,11 @@ div, h1, header {
   height: 1.40625rem;
   background: #ef3239;
   position: relative;
-  border-bottom: 1px solid #b2b2b2;
   box-sizing: border-box;
 }
 
 #header a {
   position: absolute;
-  top: 0;
   width: 1.60938rem;
   height: 1.39062rem;
   line-height: 1.39062rem;
@@ -106,7 +111,6 @@ div, h1, header {
   width: 100%;
   height: 1.375rem;
   background-color: #fff;
-  border-bottom: 1px solid #b2b2b2;
 }
 
 .nav-small a {
@@ -184,7 +188,7 @@ div, h1, header {
   position: relative;
   display: block;
   padding: 0.3125rem;
-  border-bottom: 1px solid #cccccc;
+  border-bottom: 1px solid red;
 }
 
 #content .pro-img {
